--- a/.github/workflows/OpenWrt-Official.yml
+++ b/.github/workflows/OpenWrt-Official.yml
@@ -55,16 +55,19 @@ jobs:
           echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> feeds.conf.default     
         # echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
         # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
-
+ 
       - name: Update feeds and dependencies
         working-directory: ./openwrt
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a 
           ./scripts/feeds update packages  
-       
-       #  rm -rf feeds/packages/lang/golang
-       #  svn co https://github.com/openwrt/packages/branches/openwrt-22.03/lang/golang feeds/packages/lang/golang 
+
+      - name: Setup golang 
+        working-directory: ./openwrt
+        run: |    
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
           
       #- name: Set EN as default language
        # working-directory: ./openwrt
