--- a/.github/workflows/OpenWrt-Official-R2S.yml
+++ b/.github/workflows/OpenWrt-Official-R2S.yml
@@ -68,6 +68,7 @@ jobs:
         run: |    
           rm -rf feeds/packages/lang/golang
           git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
+          sed -i 's/192.168.1.1/192.168.31.100/g' package/base-files/files/bin/config_generate
           
       #- name: Set EN as default language
        # working-directory: ./openwrt
