--- a/.github/workflows/OpenWrt-Lean-ssrp+.yml
+++ b/.github/workflows/OpenWrt-Lean-ssrp+.yml
@@ -48,11 +48,12 @@ jobs:
       - name: Add helloword
         working-directory: ./openwrt
         run: |
-          echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
-        # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
-        # echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall.git;packages" >> feeds.conf.default
-        # echo "src-git passwall_luci https://github.com/xiaorouji/openwrt-passwall.git;luci" >> feeds.conf.default
-
+          echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default          
+          echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> feeds.conf.default
+          echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> feeds.conf.default  
+          git clone https://github.com/gngpp/luci-theme-design.git  package/luci-theme-design        
+          git clone https://github.com/gngpp/luci-app-design-config.git package/luci-app-design-config
+          
       - name: Update feeds
         working-directory: ./openwrt
         run: |
