--- a/.github/workflows/OpenWrt-Official-R2S.yml
+++ b/.github/workflows/OpenWrt-Official-R2S.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # <https://github.com/82kg/autoBuildOP>
 
-name: OpenWrt-Official-R2S
+name: OpenWrt-Official-MT3000
 on:
   workflow_dispatch:
     inputs:
@@ -35,56 +35,46 @@ jobs:
           sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune --all --force
           sudo -E apt-get -qq update
-          sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+          sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          bzip2 ccache clang cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
+          g++-multilib git gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
+          libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses-dev libpython3-dev \
+          libreadline-dev libssl-dev libtool libyaml-dev libz-dev lld llvm lrzsz mkisofs msmtp nano \
+          ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply python3-docutils \
+          python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs \
+          upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
           df -h
 
       - name: Clone source code
         env: 
-          REPO_URL: https://github.com/openwrt/openwrt.git
-          REPO_BRANCH: openwrt-23.05
+          REPO_URL:  https://github.com/immortalwrt/immortalwrt
+          REPO_BRANCH: master
         run: |
-          git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+          git clone -b $REPO_BRANCH --single-branch --filter=blob:none $REPO_URL   
           git pull
           
       - name: Add helloword
         working-directory: ./openwrt
         run: |
-          echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> feeds.conf.default
-          echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> feeds.conf.default     
+        #  echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> feeds.conf.default
+        #  echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> feeds.conf.default     
         # echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
         # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
  
       - name: Update feeds and dependencies
-        working-directory: ./openwrt
+        working-directory: ./immortalwrt
         run: |
           ./scripts/feeds update -a
           ./scripts/feeds install -a 
           ./scripts/feeds update packages  
 
-      - name: Setup golang 
-        working-directory: ./openwrt
-        run: |    
-          rm -rf feeds/packages/lang/golang
-          git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
-          sed -i 's/192.168.1.1/192.168.1.100/g' package/base-files/files/bin/config_generate
-          
-      #- name: Set EN as default language
-       # working-directory: ./openwrt
-        #run: |
-         # sed -i '/option lang auto/s/auto/en/g'  ./feeds/luci/modules/luci-base/root/etc/config/luci   
           
       - name: Load custom configuration
         run: |
-          mv OpenWrt_Official/.config-arm openwrt/.config
-           
-          
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-        if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
-             
-             
+          mv  ImmortalWrt/.config-mt3000 immortalwrt/.config
+               
       - name: Make download
         working-directory: ./openwrt
         run: |
@@ -94,13 +84,13 @@ jobs:
         # sed -i 's/192.168.1.1/192.168.1.10/g' package/base-files/files/bin/config_generate   
         
       - name: Compile firmware
-        working-directory: ./openwrt
+        working-directory: ./immortalwrt
         run: |
           echo -e "$(nproc) thread build."
           make -j$(nproc) V=s
           
       - name: Assemble artifact
-        working-directory: ./openwrt
+        working-directory: ./immortalwrt
         run: |
           rm -rf ./artifact/
           mkdir -p ./artifact/
@@ -113,7 +103,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: OpenWrt firmware
-          path: openwrt/artifact
+          path: immortalwrt/artifact
           
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@v2
