Update and rename OpenWrt-Official-MT3000.yml to ImmortalWrt-MT3000.yml

--- a/.github/workflows/ImmortalWrt-MT3000.yml
+++ b/.github/workflows/ImmortalWrt-MT3000.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt firmware
+          name: MT3000
           path: immortalwrt/artifact
           
       - name: Delete workflow runs
