--- a/.github/workflows/OpenWrt-Official.yml
+++ b/.github/workflows/OpenWrt-Official.yml
@@ -87,6 +87,7 @@ jobs:
       - name: Make download
         working-directory: ./openwrt
         run: |
+          make defconfig
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
