--- a/.github/workflows/ImmortalWrt-MT3000.yml
+++ b/.github/workflows/ImmortalWrt-MT3000.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Add Services
         working-directory: ./immortalwrt
         run: |
-         git clone https://github.com/SAENE/luci-theme-design.git  package/luci-theme-design
+          git clone -b theme-design https://github.com/gfw-list/apps.git package/luci-theme-design
         #  echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> feeds.conf.default
         #  echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> feeds.conf.default     
         # echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
