--- a/.github/workflows/ImmortalWrt-MT3000.yml
+++ b/.github/workflows/ImmortalWrt-MT3000.yml
@@ -21,7 +21,7 @@ on:
     
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.02
     steps:
       - name: Checkout
         uses: actions/checkout@main
